syntax = "proto3";

package nspass.api.servers.v1;

import "common.proto";

// 服务器状态枚举
enum ServerStatus {
  SERVER_STATUS_UNSPECIFIED = 0;
  SERVER_STATUS_ONLINE = 1;
  SERVER_STATUS_OFFLINE = 2;
}

// 服务器项
message ServerItem {
  string id = 1;
  string name = 2;
  string ipv4 = 3;
  optional string ipv6 = 4;
  string region = 5;
  string group = 6;
  string register_time = 7;
  double upload_traffic = 8; // MB
  double download_traffic = 9; // MB
  ServerStatus status = 10;
}

// 创建服务器请求
message CreateServerRequest {
  string name = 1;
  string ipv4 = 2;
  optional string ipv6 = 3;
  string region = 4;
  string group = 5;
  string register_time = 6;
  optional double upload_traffic = 7;
  optional double download_traffic = 8;
  optional ServerStatus status = 9;
}

// 更新服务器请求
message UpdateServerRequest {
  optional string name = 1;
  optional string ipv4 = 2;
  optional string ipv6 = 3;
  optional string region = 4;
  optional string group = 5;
  optional string register_time = 6;
  optional double upload_traffic = 7;
  optional double download_traffic = 8;
  optional ServerStatus status = 9;
}

// 服务器列表查询参数
message GetServersRequest {
  optional int32 page = 1;
  optional int32 page_size = 2;
  optional string name = 3;
  optional ServerStatus status = 4;
  optional string region = 5;
}

// 获取服务器详情请求
message GetServerByIdRequest {
  string id = 1;
}

// 更新服务器请求（带ID）
message UpdateServerByIdRequest {
  string id = 1;
  UpdateServerRequest data = 2;
}

// 删除服务器请求
message DeleteServerRequest {
  string id = 1;
}

// 批量删除服务器请求
message BatchDeleteServersRequest {
  repeated string ids = 1;
}

// 重启服务器请求
message RestartServerRequest {
  string id = 1;
}

// 获取服务器统计请求
message GetServerStatsRequest {
  string id = 1;
}

// 服务器统计数据
message ServerStats {
  int64 uptime = 1;
  double cpu_usage = 2;
  double memory_usage = 3;
  double disk_usage = 4;
  double network_in = 5;
  double network_out = 6;
}

// 区域选项
message RegionOption {
  string label = 1;
  string value = 2;
}

// === 响应消息 ===

message GetServersResponse {
  nspass.common.v1.ApiResponse base = 1;
  repeated ServerItem data = 2;
}

message CreateServerResponse {
  nspass.common.v1.ApiResponse base = 1;
  optional ServerItem data = 2;
}

message GetServerByIdResponse {
  nspass.common.v1.ApiResponse base = 1;
  optional ServerItem data = 2;
}

message UpdateServerResponse {
  nspass.common.v1.ApiResponse base = 1;
  optional ServerItem data = 2;
}

message DeleteServerResponse {
  nspass.common.v1.ApiResponse base = 1;
}

message BatchDeleteServersResponse {
  nspass.common.v1.ApiResponse base = 1;
}

message RestartServerResponse {
  nspass.common.v1.ApiResponse base = 1;
}

message GetServerStatsResponse {
  nspass.common.v1.ApiResponse base = 1;
  optional ServerStats data = 2;
}

message GetRegionsResponse {
  nspass.common.v1.ApiResponse base = 1;
  repeated RegionOption data = 2;
} 